修复修改host时无权限时没提示的bug，增加releases地址链接

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="page_about_info">
                 <div><img src="./imges/logo@4x.png" alt=""></div>
                 <div class="page_about_name">
-                    <span>Swihost</span>
+                    <span id="swihost_link">Swihost</span>
                     <span id="about_versions"></span>
                 </div>
                 <div id="about_other_info" class="about_other_info"></div>
